# dnstester-qboxxbyh

./: .gitignore  README.md  pyproject.toml
prototypetotest/: test_dns.py
src/dnstester_qboxxbyh/: __init__.py  core.py
